Top sticky navbar updated. Bottom white space bug repaired.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 #top-navbar-list {
-    margin-top: 20px;
+
   text-align: right;
 }
 
@@ -25,7 +25,7 @@
     width: 600px;
 }
 
-#serach-field {
+.serach-field {
     display: block;
     width: 600px;
     height: 45px;
@@ -108,6 +108,7 @@
     font-size: 13px;
     background-color: rgba(0, 0, 0, .07);
     color: rgba(0, 0, 0, 0.5);
+    height: 87px;
 }
 
 #footer-location li, #footer-location p, #footer-location ul, #footer-settings li {
@@ -147,7 +148,7 @@
     right: 0;
 }
 
-#google-apps-image {
+.google-apps-image {
     vertical-align: middle;
 }
 
@@ -163,4 +164,47 @@
 a {
     text-decoration: none;
     color: inherit;
+}
+
+#sticky-part-top-navbar {
+    position: sticky;
+    top: 0;
+    background: white;
+    margin: 0 -8px;
+    padding-top: 3.5px;
+    border-bottom: 1px solid black;
+}
+
+.logo-search, #search-box {
+    display: inline;
+}
+
+.logo-search > img:nth-child(1) {
+    margin: 15px 35px 17px 20px;
+    float: left;
+}
+
+#logging-div {
+    width: 1080px;
+    display: inline-block;
+}
+
+#serach-field-right-loop {
+    display: inline-block;
+    height: 40px;
+    margin: 0;
+    background-position: 97% 50%;
+    padding-left: 25px;
+    padding-right: 40px;
+    font-size: 16px;
+}
+
+.logo-search > form:nth-child(2) {
+    display: inline;
+}
+
+#top-navbar-list > li:nth-child(2) > button:nth-child(1) {
+    padding: 8px 23px;
+    border-radius: 4px;
+    font-weight: lighter;
 }
